# posgtkhello

./: .gitignore  APKBUILD  README.md  build.sh  config.sh  sideload.sh
app/: CMakeLists.txt  main.cpp
app/include/: config.hpp
